--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest", 
+    "linter": "node ./node_modules/eslint/bin/eslint.js .",
+    "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
     "server": "node ./lib/server.js"
   },
   "repository": {
@@ -23,6 +25,7 @@
   },
   "homepage": "https://github.com/JoseLuisLopezManuel/Code-Challenge#readme",
   "devDependencies": {
+    "eslint": "^8.14.0",
     "jest": "^28.0.3"
   },
   "dependencies": {
